<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clpe_ros</name>
  <version>0.1.0</version>
  <description>ROS driver for CANLAB CLPE-G-NVP2650D</description>
  <maintainer email="none@none.com">None</maintainer>
  <!-- <license>Apache License 2.0</license> -->
  <license>Unspecified</license>
  <author>Teo Koon Peng</author>

  <depend>roscpp</depend>
  <depend>image_transport</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
